--- a/MyTrade/Views/User/TreeTTP.cshtml
+++ b/MyTrade/Views/User/TreeTTP.cshtml
@@ -207,11 +207,11 @@
                                 <div class="statbox widget box box-shadow">
                                     <div class="widget-content widget-content-area">
                                         <div class="icon-svg">
-                                            <center><a href="/User/Tree?LoginId=@item.LoginId&Id=@item.PK_UserId"><img class="level-img" src="@item.ProfilePic" height="50" width="50" style="border:5px solid @item.Color" /></a></center>
+                                            <center><a href="/User/TreeTTP?LoginId=@item.LoginId&Id=@item.PK_UserId"><img class="level-img" src="@item.ProfilePic" height="50" width="50" style="border:5px solid @item.Color" /></a></center>
                                         </div>
                                         <p class="text-center">@item.MemberName</p>
-                                        <p class="text-center">(@item.LoginId)</p>
-                                        <p class="text-center">(Sponsor- @item.SponsorName) at Level : @item.Level</p>
+                                        <p class="text-center">@item.LoginId</p>
+                                        <p class="text-center">Sponsor- @item.SponsorName at Level : @item.Level</p>
                                     </div>
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
                     if (data.lstMember != null) {
                         for (var i = 0; i < data.lstMember.length; i++) {
 
-                            $("#divMember").append('<div id="card_1" class="col-lg-3 layout-spacing"><div class="statbox widget box box-shadow"><div class="widget-content widget-content-area"><div class="icon-svg"><center><a href="/User/Tree?LoginId=' + data.lstMember[i].LoginId + '&Id=' + data.lstMember[i].PK_UserId + '"><img class="level-img" src="' + data.lstMember[i].ProfilePic + '" height="50" width="50" style="border:5px solid ' + data.lstMember[i].Color + '"/></a></center></div><p class="text-center">' + data.lstMember[i].MemberName + '</p><p class="text-center">(' + data.lstMember[i].LoginId + ')</p><p class="text-center">(Sponsor- ' + data.lstMember[i].SponsorName + ') at Level : ' + data.lstMember[i].Level + '</p></div></div></div>')
+                            $("#divMember").append('<div id="card_1" class="col-lg-3 layout-spacing"><div class="statbox widget box box-shadow"><div class="widget-content widget-content-area"><div class="icon-svg"><center><a href="/User/Tree?LoginId=' + data.lstMember[i].LoginId + '&Id=' + data.lstMember[i].PK_UserId + '"><img class="level-img" src="' + data.lstMember[i].ProfilePic + '" height="50" width="50" style="border:5px solid ' + data.lstMember[i].Color + '"/></a></center></div><p class="text-center">' + data.lstMember[i].MemberName + '</p><p class="text-center">' + data.lstMember[i].LoginId + '</p><p class="text-center">Sponsor- ' + data.lstMember[i].SponsorName + ' at Level : ' + data.lstMember[i].Level + '</p></div></div></div>')
                         }
                     }
                 }
