--- a/MyTrade/Views/Downline/AssociateTree.cshtml
+++ b/MyTrade/Views/Downline/AssociateTree.cshtml
@@ -6,101 +6,107 @@
 }
 @using (Html.BeginForm("AssociateTree", "User", FormMethod.Post, new { @id = "form1" }))
 {
-<div class="container">
-    <div class="row layout-top-spacing">
-        <div class="col-lg-12 col-12 layout-spacing">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
-                    <div class="row">
-                        <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                            <h4>Tree</h4>
+    <div class="container">
+        <div class="row layout-top-spacing">
+            <div class="col-lg-12 col-12 layout-spacing">
+                <div class="statbox widget box box-shadow">
+                    <div class="widget-header">
+                        <div class="row">
+                            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                                <h4>Tree</h4>
 
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <!-- HTML5 Export Buttons table start -->
-                            <div class="card">
-                                <div class="card-header table-card-header">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <!-- HTML5 Export Buttons table start -->
+                                <div class="card">
+                                    <div class="card-header table-card-header">
 
-                                </div>
-                                <div class="card-block">
-                                    <div class="row">
-                                        <div class="col-md-8">
-
-                                        </div>
-                                        <div>
-                                            @if (@ViewBag.LoginId != Session["LoginId"].ToString())
-                                            {
-                                                <a href="/Downline/AssociateTree?AssociateID=@ViewBag.Fk_SponsorId" id="btnDown" class="btn btn-info btn-sm">Back</a>
-                                            }
-                                        </div>
                                     </div>
-                                    <div class="dt-responsive table-responsive">
-                                        <table id="basic-btn" class="table table-striped table-bordered nowrap">
-                                            <thead>
-                                                <tr>
-                                                    <th>S No.</th>
-                                                    <th></th>
-                                                    <th>LoginId</th>
-                                                    <th>Name</th>
-                                                    <th>Status</th>
+                                    <div class="card-block">
+                                        <div class="row">
+                                            <div class="col-md-8">
 
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @if (Model != null)
+                                            </div>
+                                            <div>
+                                                @if (@ViewBag.LoginId != Session["LoginId"].ToString())
                                                 {
-                                                    if (Model.lstPlot != null)
+                                                    <a href="/Downline/AssociateTree?AssociateID=@ViewBag.Fk_SponsorId" id="btnDown" class="btn btn-info btn-sm">Back</a>
+                                                }
+                                            </div>
+                                        </div>
+                                        <div class="dt-responsive table-responsive">
+                                            <table id="basic-btn" class="table table-striped table-bordered nowrap">
+                                                <thead>
+                                                    <tr>
+                                                        <th>S No.</th>
+                                                        <th></th>
+                                                        <th>Sponsor Id</th>
+                                                        <th>Sponsor Name</th>
+                                                        <th>LoginId</th>
+                                                        <th>Name</th>
+                                                        <th>Status</th>
+                                                        <th>Activation Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (Model != null)
                                                     {
-                                                        int i = 1;
-                                                        foreach (var Item in Model.lstPlot)
+                                                        if (Model.lstPlot != null)
                                                         {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>
-                                                        @if (Item.Status == "Down")
-                                                        {
+                                                            int i = 1;
+                                                            foreach (var Item in Model.lstPlot)
+                                                            {
+                                                                <tr class="text-left">
+                                                                    <td>@i</td>
+                                                                    <td>
+                                                                        @if (Item.Status == "Down")
+                                                                        {
 
-                                                                    <a href="/Downline/AssociateTree?AssociateID=@Item.Fk_UserId" id="btnDown" class="btn btn-success btn-sm">Down</a>
-                                                        }
-                                                        else
-                                                        {
-                                                                    <a href="#" id="btnDown" class="btn btn-success btn-sm">Self</a>
-                                                        }
+                                                                            <a href="/Downline/AssociateTree?AssociateID=@Item.Fk_UserId" id="btnDown" class="btn btn-primary btn-sm">Next</a>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            @*<a href="#" id="btnDown" class="btn btn-success btn-sm">Self</a>*@
+                                                                        }
 
 
-                                                    </td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.FirstName</td>
-                                                    <td>
-                                                        @if (Item.ActiveStatus == "Inactive")
-                                                        {
-                                                                    <a href="#" id="btnDown" class="label label-danger">@Item.ActiveStatus</a>
-                                                        }
-                                                        else
-                                                        {
-                                                                    <a href="#" id="btnDown" class="label label-success">@Item.ActiveStatus</a>
-                                                        }
+                                                                    </td>
+                                                                    <td>@Item.SponsorID</td>
+                                                                    <td>@Item.SponsorName</td>
+                                                                    <td>@Item.LoginId</td>
+                                                                    <td>@Item.FirstName</td>
+                                                                    <td>
+                                                                        @if (Item.ActiveStatus == "Inactive")
+                                                                        {
+                                                                            <a href="#" id="btnDown" class="label label-danger">@Item.ActiveStatus</a>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <a href="#" id="btnDown" class="label label-success">@Item.ActiveStatus</a>
+                                                                        }
 
-                                                    </td>
-                                                </tr>
-                                                            i++;
+                                                                    </td>
+                                                                    <td>@Item.ActivationDate</td>
+                                                                </tr>
+                                                                i++;
+                                                            }
                                                         }
                                                     }
-                                                }
-                                            </tbody>
-                                            <tfoot>
-                                                <tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
 
-                                                    <th>S No.</th>
-                                                    <th></th>
-                                                    <th>LoginId</th>
-                                                    <th>Name</th>
-                                                    <th>Status</th>
-                                                </tr>
-                                            </tfoot>
-                                        </table>
+                                                        <th>S No.</th>
+                                                        <th></th>
+                                                        <th>LoginId</th>
+                                                        <th>Name</th>
+                                                        <th>Status</th>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -110,5 +116,4 @@
             </div>
         </div>
     </div>
-</div>
 }
