--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -50,8 +50,8 @@
                                     <tr>
                                         <th>S No.</th>
                                         <th>Name</th>
-                                        <th>Pin Amount</th>
-                                        <th>Used For</th>
+                                        <th>Topup Amount</th>
+                                        @*<th>Used For</th>*@
                                         <th>BV</th>
                                         @*<th>Is Calculated</th>*@
                                         <th>Transaction By</th>
@@ -72,7 +72,7 @@
                                                     <td>@i</td>
                                                     <td>@Item.Name</td>
                                                     <td>@Item.PinAmount</td>
-                                                    <td>@Item.UsedFor</td>
+                                                    @*<td>@Item.UsedFor</td>*@
                                                     <td>@Item.BV</td>
                                                     @*<td>@Item.IsCalculated</td>*@
                                                     <td>@Item.TransactionBy</td>
