--- a/MyTrade/Views/Admin/EPinRequestList.cshtml
+++ b/MyTrade/Views/Admin/EPinRequestList.cshtml
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
                             </div>
-                                <table id="html5-extension" class="table table-hover non-hover table-responsive">
+                                <table id="html5-extension" class="table table-hover non-hover table-responsive" data-page-length='20'>
                                     <thead>
                                         <tr>
                                             <th>Sr No.</th>
