--- a/MyTrade/Views/Admin/LevelIncomeTr1ForAdmin.cshtml
+++ b/MyTrade/Views/Admin/LevelIncomeTr1ForAdmin.cshtml
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover">
+                            <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
