--- a/MyTrade/Views/Admin/PinTransferReportForAdmin.cshtml
+++ b/MyTrade/Views/Admin/PinTransferReportForAdmin.cshtml
@@ -58,7 +58,7 @@
                                         </div>
                                     </div>
                                     <div class="table-responsive">
-                                        <table class="table table-bordered w-100 mb-0" id="html5-extension">
+                                        <table class="table table-bordered w-100 mb-0" id="html5-extension" data-page-length='20'>
                                             <thead>
                                                 <tr>
                                                     <th>Sr No.</th>
