--- a/MyTrade/Views/Admin/ViewROIForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ViewROIForAdmin.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <div class="widget-content widget-content-area">
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>S No.</th>
