--- a/MyTrade/Views/Admin/WalletList.cshtml
+++ b/MyTrade/Views/Admin/WalletList.cshtml
@@ -52,12 +52,11 @@
                             </div>
                             <div class="widget-content widget-content-area br-6">
                                 <div class="table-responsive">
-                                    <table id="html5-extension" class="table table-hover non-hover table-responsive">
+                                    <table id="html5-extension" class="table table-hover non-hover table-responsive" data-page-length='20'>
                                         <thead>
                                             <tr>
                                                 <th>Sr No.</th>
                                                 @*<th>Request Code</th>*@
-                                                <th>Wallet Id</th>
                                                 <th>Login Id</th>
                                                 <th>Name</th>
                                                 <th>Amount</th>
@@ -77,7 +76,6 @@
                                                         <tr class="text-left">
                                                             <td>@i</td>
                                                             @*<td>@Item.RequestCode</td>*@
-                                                            <td>@Item.WalletId</td>
                                                             <td>@Item.LoginId</td>
                                                             <td>@Item.DisplayName</td>
                                                             <td>@Item.Amount</td>
