--- a/MyTrade/Views/User/EPinRequest.cshtml
+++ b/MyTrade/Views/User/EPinRequest.cshtml
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area br-6">
-                        <table id="html5-extension" class="table table-hover non-hover">
+                        <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                             <thead>
                                 <tr>
                                     <th>Sr No.</th>
