--- a/MyTrade/Views/Admin/ROIIncomeReportsForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ROIIncomeReportsForAdmin.cshtml
@@ -44,7 +44,7 @@
                                     <input class="btn btn-success pull-left" type="submit" value="Search" id="Search" name="Search" />
                                 </div>
                             </div>
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>S No.</th>
