--- a/MyTrade/Views/Admin/UnUsedPin.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPin.cshtml
@@ -57,7 +57,7 @@
                         </div>
                         <div class="widget-content widget-content-area br-6">
 
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
