--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -84,7 +84,7 @@
 
                         <div class="widget-content widget-content-area br-6">
 
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%">
+                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
