--- a/MyTrade/Views/Report/LevelIncomeTr1.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr1.cshtml
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover">
+                            <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -54,6 +54,7 @@
                                         <th>Percentage</th>
                                         <th>Income</th>
                                         <th>Level</th>
+                                        <th>Status</th>
                                         <th>Transaction Date</th>
                                     </tr>
                                 </thead>
@@ -73,6 +74,7 @@
                                                     <td>@Item.Percentage</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Level</td>
+                                                    <td>@Item.Status</td>
                                                     <td>@Item.TransactionDate</td>
                                                 </tr>
                                                 i++;
