--- a/MyTrade/Views/Report/LevelIncomeTr2.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr2.cshtml
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover">
+                            <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -54,6 +54,7 @@
                                         <th>Income</th>
                                         <th>Percentage</th>
                                         <th>Level</th>
+                                        <th>Status</th>
                                         <th>Transaction Date</th>
                                     </tr>
                                 </thead>
@@ -67,11 +68,13 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
+                                                    <td>@Item.PayoutNo</td>
                                                     <td>@Item.FromName</td>
                                                     <td>@Item.BusinessAmount</td>
                                                     <td>@Item.Amount</td>
-                                                    <th>@Item.Percentage</th>
+                                                    <th>@Item.Percentage %</th>
                                                     <td>@Item.Level</td>
+                                                    <th>@Item.Status</th>
                                                     <td>@Item.TransactionDate</td>
                                                 </tr>
                                                 i++;
