--- a/MyTrade/Views/Wallet/WalletList.cshtml
+++ b/MyTrade/Views/Wallet/WalletList.cshtml
@@ -19,7 +19,7 @@
                     </div>
                     <div class="widget-content widget-content-area">
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover">
+                            <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
