--- a/MyTrade/Views/Report/LevelIncomeTr1.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr1.cshtml
@@ -71,7 +71,7 @@
                                                     <td>@Item.PayoutNo</td>
                                                     <td>@Item.FromName (@Item.FromLoginId)</td>
                                                     <td>@Item.BusinessAmount</td>
-                                                    <td>@Item.Percentage</td>
+                                                    <td>@Item.Percentage %</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Level</td>
                                                     <td>@Item.Status</td>
