--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -149,9 +149,7 @@
         height: 300px;
     }
 
-    .widget-heading.lil {
-        min-height: 90px;
-    }
+
 </style>
 
 <div class="layout-px-spacing" style="margin-bottom: 70px;">
@@ -312,17 +310,21 @@
                 <div class="col-lg-12 col-sm-6 col-6">
                     <a href="#">
                         <div class="widget widget-account-invoice-three eight">
-                            <div class="widget-heading lil">
-                                <div class="particular-balance d-flex">
+                            <div class="widget-heading">
+                                <div class="wallet-balance">
+                                    <p><i class="fa fa-credit-card-alt" aria-hidden="true"></i>  Recharge</p>
+                                </div>
+                                <div class="particular-balance d-flex mt-5">
                                     <div class="fisrtdiv">
-                                        <p>Recharge</p>
+                                        <p><i class="fa fa-credit-card-alt" aria-hidden="true"></i>  Bill Payment</p>
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-12 col-sm-6 col-6">
+                @*<div class="col-lg-12 col-sm-6 col-6">
                     <a href="#">
                         <div class="widget widget-account-invoice-three eight">
                             <div class="widget-heading lil">
@@ -334,7 +336,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div>*@
             </div>
 
         </div>
