--- a/MyTrade/assets/css/dashboard/dash_1.css
+++ b/MyTrade/assets/css/dashboard/dash_1.css
@@ -900,6 +900,7 @@
 
 .widget-account-invoice-three {
     padding: 0;
+    height: 215px;
     border-top-right-radius: 25px;
     border-top-left-radius: 25px;
     background: #fdfdfd;
