--- a/MyTrade/Views/User/PinTransferReport.cshtml
+++ b/MyTrade/Views/User/PinTransferReport.cshtml
@@ -60,9 +60,10 @@
                                         <table class="table table-bordered w-100 mb-0" id="html5-extension">
                                             <thead>
                                                 <tr>
-
                                                     <th>Sr No.</th>
                                                     <th>EPin No</th>
+                                                    <th>Pin Amount</th>
+                                                    <th>Package Name</th>
                                                     <th>From Id</th>
                                                     <th>From Name</th>
                                                     <th>To Id</th>
@@ -85,6 +86,8 @@
                                                                     @i
                                                                 </td>
                                                                 <td>@Item.ePinNo</td>
+                                                                <td>@Item.PinAmount</td>
+                                                                <td>@Item.ProductName</td>
                                                                 <td>@Item.FromId</td>
                                                                 <td>@Item.FromName</td>
                                                                 <td>@Item.ToId</td>
