--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -66,6 +66,30 @@
                 background-image: linear-gradient(60deg,#ffa726,#fb8c00);
             }
         }
+
+
+    #preloader {
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:#FFF; /* change if the mask should have another color then white */
+    z-index:99999; /* makes sure it stays on top */
+}
+#status {
+    width:100px;
+    height:100px;
+    position:absolute;
+    left:50%; /* centers the loading animation horizontally one the screen */
+    top:50%; /* centers the loading animation vertically one the screen */
+    background-image:url("../imgs/loader.gif");
+    z-index:9999; /* path to your loading animation */
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size: cover;
+    margin:-50px 0 0 -50px; /* is width and height divided by two */
+}
     </style>
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 </head>
@@ -503,6 +527,20 @@
             "lengthMenu": [7, 10, 20, 50],
             "pageLength": 7
         });
+    </script>
+
+
+    <div id="preloader">
+        <div id="status">
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+$(window).load(function() { // makes sure the whole site is loaded
+$('#status').fadeOut(); // will first fade out the loading animation
+$('#preloader').delay(200).fadeOut(400); // will fade out the white DIV that covers the website.
+$('body').delay(200).css({'overflow':'visible'});
+})
     </script>
 
 
