--- a/MyTrade/Views/User/EPinRequest.cshtml
+++ b/MyTrade/Views/User/EPinRequest.cshtml
@@ -43,14 +43,15 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="FinalAmount">Final Amount</label>
-                                @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @placeholder = "Final Amount", @disabled = "disabled" })
+                                <input type="hidden" id="WalletAmount" value="@ViewBag.WalletBalance" />
+                                @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @placeholder = "Final Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();", @disabled = "disabled" })
                             </div>
-                            <div class="col-md-4">
+                            @*<div class="col-md-4">
                                 <label for="Fk_Paymentid">Payment Mode</label>
                                 @Html.DropDownListFor(m => m.Fk_Paymentid, new SelectList(ViewBag.ddlPayment, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
-                            </div>
+                            </div>*@
                         </div>
-                        <div class="row mb-4" style="display:none" id="divPaymentMode">
+                        @*<div class="row mb-4" style="display:none" id="divPaymentMode">
                             <div class="col-md-3" id="divbankname">
                                 <label for="BankName" id="lblbank">Bank Name</label>
                                 @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
@@ -68,7 +69,7 @@
                                 @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date" })
                             </div>
                          
-                        </div>
+                        </div>*@
                         <div class="row">
                             <input class="btn btn-success pull-left" type="submit" value="Request Pin" id="btnsave" name="btnsave" onclick="return validateform();" />
                         </div>
@@ -520,8 +521,52 @@
             $("#divbankbranch").hide();
             $("#divtrdate").hide();
         }
-
     }
+
+    function isNumberKey(evt) {
+        var charCode = (evt.which) ? evt.which : event.keyCode;
+        if (charCode != 46 && charCode > 31
+          && (charCode < 48 || charCode > 57))
+            return false;
+        return true;
+    }
+
+
+    function CheckAmount() {
+        debugger;
+        var FinalAmount = $("#FinalAmount").val();
+        var WalletBalance = $("#WalletAmount").val();
+        if (FinalAmount != null && FinalAmount != "" && FinalAmount != "0") {
+            if (parseInt(FinalAmount) % 1000 == 0) {
+                if (parseInt(FinalAmount) > parseInt(WalletBalance)) {
+                    Snackbar.show({
+                        text: "Insufficient Amount",
+                        actionTextColor: '#fff',
+                        backgroundColor: '#e7515a',
+                        pos: 'top-right'
+                    });
+                    $("#FinalAmount").addClass('errortext');
+                    $('#FinalAmount').focus();
+                    $("#FinalAmount").val('');
+                    return false;
+                }
+            }
+            else {
+                Snackbar.show({
+                    text: "Invalid Amount",
+                    actionTextColor: '#fff',
+                    backgroundColor: '#e7515a',
+                    pos: 'top-right'
+                });
+                $("#FinalAmount").addClass('errortext');
+                $('#FinalAmount').focus();
+                $("#FinalAmount").val('');
+                return false;
+            }
+        }
+        return true;
+    }
+
 </script>
 
 @if (TempData["msg"] != null)
